force-app/main/default/objects/Carro_de_Luxo__c/Carro_de_Luxo__c.object-meta.xml
<CustomObject>
    <description>Venda de carro de luxo - utilização em concessionaria.</description>
    <label>Carro de Luxo</label>
    <nameField>
        <label>Nome de Carro de Luxo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carros de Luxo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>