force-app/main/default/objects/Carro_de_Luxo__c/fields/Car_Age_in_years__c.field-meta.xml
<CustomField>
    <fullName>Car_Age_in_years__c</fullName>
    <description>Calcula a idade do carro em anos.</description>
    <formula>YEAR(TODAY()) -  Year_of_manufacture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calcula a idade do carro em anos.</inlineHelpText>
    <label>Idade do Carro em anos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>