force-app/main/default/objects/Carro_de_Luxo__c/fields/Car_Condition__c.field-meta.xml
<CustomField>
    <fullName>Car_Condition__c</fullName>
    <label>Condicao do Carro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Seminovo</fullName>
            </value>
            <value>
                <fullName>Restaurado</fullName>
            </value>
            <value>
                <fullName>Personalizado</fullName>
            </value>
            <value>
                <fullName>Coleção</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>