force-app/main/default/objects/Carro_de_Luxo__c/fields/Car_model__c.field-meta.xml
<CustomField>
    <fullName>Car_model__c</fullName>
    <description>Para armazenar o modelo específico do carro de luxo.</description>
    <inlineHelpText>Descreva o modelo do carro de luxo.</inlineHelpText>
    <label>Modelo do Carro</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>