force-app/main/default/objects/Carro_de_Luxo__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <description>Selecione o tipo de carro.</description>
    <inlineHelpText>Selecione o tipo de carro.</inlineHelpText>
    <label>Tipo de Carro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedan de Luxo</fullName>
            </value>
            <value>
                <fullName>SUV de Luxo</fullName>
            </value>
            <value>
                <fullName>Coupé de Luxo</fullName>
            </value>
            <value>
                <fullName>Conversível de Luxo</fullName>
            </value>
            <value>
                <fullName>Carro Esportivo de Luxo</fullName>
            </value>
            <value>
                <fullName>Hatchback de Luxo</fullName>
            </value>
            <value>
                <fullName>Carro de Luxo de Alta Performance</fullName>
            </value>
            <value>
                <fullName>Carro Elétrico de Luxo</fullName>
            </value>
            <value>
                <fullName>Limusine de Luxo</fullName>
            </value>
            <value>
                <fullName>Carro de Luxo Clássico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>