force-app/main/default/objects/Carro_de_Luxo__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Especificação da cor do veiculo</description>
    <inlineHelpText>Adicione a cor do veiculo</inlineHelpText>
    <label>Cor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>