force-app/main/default/objects/Carro_de_Luxo__c/fields/days_since_sale__c.field-meta.xml
<CustomField>
    <fullName>days_since_sale__c</fullName>
    <description>Calcula a quantidade de dias que se passaram desde a venda.</description>
    <formula>TODAY() - Sale_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calcula a quantidade de dias que se passaram desde a venda.</inlineHelpText>
    <label>dias desde a venda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>