force-app/main/default/objects/Carro_de_Luxo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Para descrever os dados do veiculo</description>
    <inlineHelpText>Descreva informações pertinentes ao veiculo.</inlineHelpText>
    <label>Descricao</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>