force-app/main/default/objects/Carro_de_Luxo__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>Este campo registra a porcentagem de desconto aplicada ao preço original do carro durante a venda.</description>
    <inlineHelpText>Adicione a porcentagem de desconto concedida.</inlineHelpText>
    <label>Porcentagem de Desconto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>