force-app/main/default/objects/Carro_de_Luxo__c/fields/fuel__c.field-meta.xml
<CustomField>
    <fullName>fuel__c</fullName>
    <description>Combustivel do veiculo.</description>
    <inlineHelpText>Selecione um ou mais combustiveis pertinentes ao veiculo.</inlineHelpText>
    <label>Combustivel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasolina</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Etanol</fullName>
            </value>
            <value>
                <fullName>Biodiesel</fullName>
            </value>
            <value>
                <fullName>Gás Natural Veicular (GNV)</fullName>
            </value>
            <value>
                <fullName>Eletricidade</fullName>
            </value>
            <value>
                <fullName>Hidrogênio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>