force-app/main/default/objects/Carro_de_Luxo__c/fields/Guarantee_in_days__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_in_days__c</fullName>
    <description>Para descrever quantidade de dias de garantia.</description>
    <inlineHelpText>Adicione quantos dias de garantia tem o veiculo.</inlineHelpText>
    <label>Garantia em dias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>