force-app/main/default/objects/Carro_de_Luxo__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Identificação do fabricante do veiculo.</description>
    <inlineHelpText>Selecione o fabricante do veiculo.</inlineHelpText>
    <label>Fabricante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mercedes-Benz</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>Porsche</fullName>
            </value>
            <value>
                <fullName>Bentley</fullName>
            </value>
            <value>
                <fullName>Rolls-Royce</fullName>
            </value>
            <value>
                <fullName>Lamborghini</fullName>
            </value>
            <value>
                <fullName>Ferrari</fullName>
            </value>
            <value>
                <fullName>Aston Martin</fullName>
            </value>
            <value>
                <fullName>Maserati</fullName>
            </value>
            <value>
                <fullName>Bugatti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>