force-app/main/default/objects/Carro_de_Luxo__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <description>Markup de venda do veiculo.</description>
    <inlineHelpText>Markup de venda do veiculo.</inlineHelpText>
    <label>Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>