force-app/main/default/objects/Carro_de_Luxo__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <description>Descreva a quilometragem do veiculo.</description>
    <inlineHelpText>Adicione a quilometragem do veiculo.</inlineHelpText>
    <label>Quilometragem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>