force-app/main/default/objects/Carro_de_Luxo__c/fields/Number_of_Ports__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ports__c</fullName>
    <description>Numero de posrtas do veiculo.</description>
    <inlineHelpText>Adicione quantas portas tem o veiculo.</inlineHelpText>
    <label>Numero de Portas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>