force-app/main/default/objects/Carro_de_Luxo__c/fields/Price_after_discount__c.field-meta.xml
<CustomField>
    <fullName>Price_after_discount__c</fullName>
    <description>Preço do carro apos desconto concedido</description>
    <formula>Sale_price__c  -( Sale_price__c   *  Discount_Percentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Preço do carro apos desconto concedido</inlineHelpText>
    <label>Preco pos desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>