force-app/main/default/objects/Carro_de_Luxo__c/fields/Profit_margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_margin__c</fullName>
    <description>Retorna a margem de lucro da venda.</description>
    <formula>Price_after_discount__c -  Purchase_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retorna a margem de lucro da venda.</inlineHelpText>
    <label>Margem de lucro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>