force-app/main/default/objects/Carro_de_Luxo__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <description>Preço de compra do veiculo- antes da venda</description>
    <inlineHelpText>Informe o preço de compra do veiculo.</inlineHelpText>
    <label>Preco de Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>