force-app/main/default/objects/Carro_de_Luxo__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>Para registrar a data em que o carro foi vendido.</description>
    <inlineHelpText>Adicione a data de venda do veiculo.</inlineHelpText>
    <label>Data de Venda</label>
    <type>Date</type>
</CustomField>