force-app/main/default/objects/Carro_de_Luxo__c/fields/Sale_price__c.field-meta.xml
<CustomField>
    <fullName>Sale_price__c</fullName>
    <description>Calcula de forma automatica o preço de venda baseado no markup informado.</description>
    <formula>Purchase_Price__c  +  ( Purchase_Price__c  *   Markup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calcula de forma automatica o preço de venda baseado no markup informado.</inlineHelpText>
    <label>Preco de Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>