force-app/main/default/objects/Carro_de_Luxo__c/fields/Sale_Status__c.field-meta.xml
<CustomField>
    <fullName>Sale_Status__c</fullName>
    <label>Status da Venda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Concluída</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Aguardando Pagamento</fullName>
            </value>
            <value>
                <fullName>Reservada</fullName>
            </value>
            <value>
                <fullName>Entrega Pendente</fullName>
            </value>
            <value>
                <fullName>Aguardando Documentação</fullName>
            </value>
            <value>
                <fullName>Em Negociação</fullName>
            </value>
            <value>
                <fullName>Oferta em Análise</fullName>
            </value>
            <value>
                <fullName>Em Inspeção</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>