force-app/main/default/objects/Carro_de_Luxo__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>descrição do numero de serie/VIN veiculo.</description>
    <inlineHelpText>Adicione o numero de serie/VIN do veiculo.</inlineHelpText>
    <label>Numero de Serie/VIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>