force-app/main/default/objects/Carro_de_Luxo__c/fields/Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_ID__c</fullName>
    <description>Informa o Id do veiculo que foi gerado automaticamente.</description>
    <displayFormat>Car-{0000}</displayFormat>
    <inlineHelpText>Informa o Id do veiculo que foi gerado automaticamente.</inlineHelpText>
    <label>Id Veiculo</label>
    <type>AutoNumber</type>
</CustomField>