force-app/main/default/objects/Carro_de_Luxo__c/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <description>Descreve caso a venda ainda esteja em garantia.</description>
    <formula>IF(
     days_since_sale__c  &lt;= Guarantee_in_days__c,
    &quot;Em Garantia&quot;,
    &quot;Fora de Garantia&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Descreve caso a venda ainda esteja em garantia.</inlineHelpText>
    <label>Status de Garantia</label>
    <type>Text</type>
</CustomField>