force-app/main/default/objects/Carro_de_Luxo__c/fields/Year_of_manufacture__c.field-meta.xml
<CustomField>
    <fullName>Year_of_manufacture__c</fullName>
    <description>Ano de fabricação do veiculo.</description>
    <inlineHelpText>Adicione o ano de fabricação do veiculo.</inlineHelpText>
    <label>Ano de Fabricacao</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>